# distant-paper

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: CMakeLists.txt  SFML.cmake  SuperBuildConfig.cmake  abseil-cpp.cmake  bootstrap.cmake  boringssl.cmake  buildConfig.cmake  buildLinux.sh  buildPrompt.bat  buildPrompt.sh  buildSolutions.cmd  cares.cmake  grpc.cmake  projects.cmake  protobuf.cmake  re2.cmake  zlib.cmake
demo/: CMakeLists.txt  projects.cmake
proto/: drawing_service.grpc.pb.cc  drawing_service.grpc.pb.h  drawing_service.pb.cc  drawing_service.pb.h  drawing_service.proto  drawing_types.grpc.pb.cc  drawing_types.grpc.pb.h  drawing_types.pb.cc  drawing_types.pb.h  drawing_types.proto  greeter.grpc.pb.h  greeter.pb.cc  greeter.pb.h  greeter.proto  server_connection.grpc.pb.cc  server_connection.grpc.pb.h  server_connection.pb.cc  server_connection.pb.h  server_connection.proto  test.pb.cc  test.pb.h  test.proto
src/: CMakeLists.txt  DrawingManager.cpp  DrawingManager.h  HomePageEventHandler.cpp  HomePageEventHandler.h  IDrawingManager.h  IEventHandler.h  IRenderer.h  IServerManager.h  ServerManager.cpp  ServerManager.h  UIRenderer.cpp  UIRenderer.h  WhiteboardClientApp.cpp  WhiteboardClientApp.h  WhiteboardPageEventHandler.cpp  WhiteboardPageEventHandler.h  WhiteboardStateMachine.h  main.cpp
src/Client/: CMakeLists.txt  DrawingManager.cpp  DrawingManager.h  HomePageEventHandler.cpp  HomePageEventHandler.h  IDrawingEventListener.h  IDrawingManager.h  IEventHandler.h  IRenderer.h  IServerConnectionManager.h  ServerConnectionManager.cpp  ServerConnectionManager.h  UIRenderer.cpp  UIRenderer.h  WhiteboardClientApp.cpp  WhiteboardClientApp.h  WhiteboardPageEventHandler.cpp  WhiteboardPageEventHandler.h  main.cpp
src/Server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  DrawingService.cpp  DrawingService.h  IServerManager.h  ServerManager.cpp  ServerManager.h  main.cpp
src/Utilities/: CMakeLists.txt  DrawingTypeSerializationConverterUtil.cpp  DrawingTypeSerializationConverterUtil.h  GeometricIntersectionUtil.cpp  GeometricIntersectionUtil.h
